css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 660px;
    min-height: 680px;
    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    transition-duration: 0.3s;
    height: 125px;
    width: 125px;
    background: #2e3d49;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
}

.deck .card.open {
    transform: rotateY(180deg);
    background: #02b3e4;
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
}

.deck .card.match {
    transform: rotateY(180deg);
    cursor: default;
    background: #02ccba;
    font-size: 33px;
}

.deck .card i {
    transform: rotateY(180deg);
}

/*
 * Styles for the Score Panel
 */

.score-panel {
    display: flex;
    justify-content: space-between;
    text-align: center;
    width: 345px;
    margin-bottom: 10px;
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    margin: 0 5px 0 0;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
}

.score-panel .restart {
    cursor: pointer;
}

/* Modal */

.modal-postgame,
.modal-pregame {
    display: none;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 100;
    background-color: rgba(0,0,0,.35);
    transition-duration: 0.5s;
}

.modal-pregame {
    display: flex;
}

.modal-box{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 300px;
    width: 450px;
    padding: 15px;
    background: white url(../img/geometry2.png);;
    border-radius: 10px;
}

.modal-box * {
    margin-top: 10px;
}

.star-score {
    display: block;
    margin: 0;
}

.star-score * {
    margin: 0;
    padding: 0;
    margin: 0;
    list-style: none;
    display: inline-block;
}

.styled-btn,
.styled-btn:focus {
    outline: none;
    cursor: pointer;
    background-color: rgba(0,140,186,1);
    border: none;
    border-radius: 6px;
    color: white;
    padding: 10px 24px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    box-shadow: 5px 5px 5px rgba(0,0,0,.2);
    transition-duration: 0.5s;
}

.styled-btn:hover {
    box-shadow: 2px 2px 1px rgba(0,0,0,.2)
}

